# hacrypto

./: .gitignore  .gitmodules  AES.hs  AUDITS.md  AlgorithmTypes.hs  Glue.hs  LICENSE  Main.hs  NaCl_vs_SuiteB.md  PPrint.hs  Parser.hs  README.md  ReqParser.hs  SuiteB.hs  Transducer.hs  Types.hs  calf.cabal  transformers.dpatch
BouncyCastle-1.50/: bc-build.properties
C++/crypto++/: 3way.cpp  3way.h  GNUmakefile  License.txt  Readme.txt  adler32.cpp  algebra.h  algparam.cpp  arc4.h  asn.cpp  base64.h  basecode.cpp  basecode.h  bench.h  blowfish.cpp  cast.cpp  channels.cpp  channels.h  crc.cpp  cryptest.cpp  cryptest.dsp  des.cpp  des.h  dessp.cpp  dh.cpp  dh.h  diamond.cpp  dmac.h  dsa.cpp  ec2n.cpp  eccrypto.cpp  elgamal.h  esign.h  files.h  gf2n.h  gfpcrypt.h  gost.cpp  gost.h  haval.cpp  haval.h  (+61 more)
C/FreeBSD/: cryptotest.c
C/OpenAES-0.9.0/: CMakeCache.txt
C/cl342/: test32.sln
C/gnupg-1.4.18/: ChangeLog  Makefile.in  aclocal.m4  configure  gnupg.spec
C/gnupg-2.0.25/: aclocal.m4  configure
C/hs-cryptohash/: .gitignore  README.md  cryptohash.cabal
C/libgcrypt-1.6.1/: ChangeLog  config.h.in
C/libssl/: generate_pkgconfig.sh
Cryptol/SHA-2/: LongDigest.java  SHA-2.cry  SHA256-brokenEndian.cry  SHA256.cry  SHA384.cry  sha512.c
Cryptol/SHA256/: SHA256.cry1
Implementation/: Debug.hs
Java/BouncyCastle-1.50/: bc-build.properties
Test/: AES.hs
TestGen/: .classpath  .project  README.md  README_KAT.md  SHA256_KAT_auto
TestGen/CHarness/: SHA256_NSS_KAT.c  callsha.h  harness.c  lib.c  sha_nss.c
TestGen/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
TestGen/test_defs/: CBCMMT128  C_tests  SHA256_KAT  SHA256_KAT_auto  aes_tests_1  aes_tests_2  all_but_tdes_tests  harness_tests  hmac_tests  rng_tests_1  rng_tests_2  sha_tests  shortMsg  tdes_tests_1  tdes_tests_2  tdes_tests_cbc  tdes_tests_cfb64  tdes_tests_cfb8  tdes_tests_ecb  tdes_tests_ofb  tests
TestGen/tmp/: CCompare.st  CCompare_help.st  CKAT.st  CKAT.stg  CKATbak.st  CXCompare.st  Ccommon_test.c  Ccommon_test.h  Ctests.st  Ctests.stg  Makefile.st  header.st  repeat.st  reqfile.st  reqs.st  run_tests.st
Verification/VST/: LICENSE  README.md
arch/: CiphersInformal.bon  CoreInformal.bon  Creation.bon  Events.bon  HACrypto.bon  Hashes.bon  HashesInformal.bon  KeysInformal.bon  MACInformal.bon  Makefile  Scenarios.bon  Side_Channels.txt  SignaturesInformal.bon  TextInformal.bon  ThreatsInformal.bon  hacrypto system architecture.graffle  hacrypto-icg.dot  hacrypto-iig.dot  hacrypto.html  index.html  index.txt
arch/hacrypto/: BCSHA_256.java  Hash.java  SHA_1.java  SHA_256.java
arch/html/: ANY-diagram.html  ANY.html  ARRAY-diagram.html  ARRAY.html  BOOLEAN-diagram.html  BOOLEAN.html  FILE-diagram.html  FILE.html  FLOAT-diagram.html  FLOAT-related.html  FLOAT.html  HASH-diagram.html  HASH-related.html  HASH.html  INTEGER-diagram.html  INTEGER.html  LIST-diagram.html  LIST.html  NONE-diagram.html  NONE.html  NUMBER-diagram.html  NUMBER-related.html  NUMBER.html  SET-diagram.html  SET.html  SHA_1-diagram.html  SHA_1-related.html  SHA_1.html  SHA_256-diagram.html  SHA_256.html  STRING-diagram.html  STRING.html  TABLE-diagram.html  TABLE.html  TREE-diagram.html  TREE.html  TUPLE-diagram.html  TUPLE.html  VALUE-diagram.html  VALUE-related.html  (+4 more)
architecture/: architecture.graffle
c/: notes.txt
c/cl342/: crypt32.vcxproj
c/openssl-1.0.1g/: sonar-project.properties
c/relic-0.3.5/: CMakeCache.txt
calf/: .gitignore  LICENSE
calf/lib/: AlgorithmTypes.hs  Computation.hs  Glue.hs  Parser.hs  Types.hs
callsha/: Ccommon_test.h  Makefile  SHA256_implementations.txt  autotest.c  callsha.c  callsha.h  framac_entry.c  hashes.h  sha.c  sha_nss.c  sha_vst.c  shadiff.htm  sodium_SHA256_vs_freseBSD.htm
callsha/testread/: Ccommon_test.c  SHA256_compare_out
callsha/tests/: Makefile  SHA256_NSS_KAT.c  SHA256_VST_KAT.c  SHA256_compare.c  SHA256_sodium_KAT.c  repeatstring.c  run_tests.c  tests.exe.stackdump  tests.h
callsha/tests2/: SHA256_compare_out  SHA256longMsg.req  SHA256longMsg_out  SHA256shortMsg.req  SHA256shortMsg_out
competitions/CAESAR/: Crypto competitions_ CAESAR call for submissions, final (2014.01.27).html  Crypto competitions_ CAESAR committee.html  Crypto competitions_ CAESAR frequently asked questions.html  Crypto competitions_ CAESAR_ Competition for Authenticated Encryption_ Security, Applicability, and Robustness.html  analysis.md  download (3).html  download (4).html
competitions/SHA-3/: sha3.org
cryptanalysis/: README.md
demonstrations/: Makefile  overview.graffle  readme.md
demonstrations/aes/: AES.hs  AESTBox.cry  AESTBox.gen  Makefile  Makefile.local  aes.c  aes.config  aes.cry  aes.gen  aes.saw
lib/: AlgorithmTypes.hs  Computation.hs  PPrint.hs  Parser.hs  SuiteB.hs  Transducer.hs  Types.hs
lib/Implementation/: Cryptodev.chs  Debug.hs
lib/Test/: AES.hs  TDES.hs  Util.hs
proposals/: README.md
resources/: SuiteB.md  Verifiable Side-Channel Security of Cryptographic Implementation.webloc  draft-irtf-t2trg-iot-seccons-00.txt
resources/FIPS/: fip190.txt  fips185.txt
resources/Java/: JEP 115- AEAD CipherSuites.webloc  JEP 121- Stronger Algorithms for Password-Based Encryption.webloc  (+3 more)
resources/papers/: rfc7253.html
side_channels/: README.md
src/C/libgfshare/libgfshare-1.0.5/: AUTHORS  COPYRIGHT  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  libgfshare.pc.in
src/C/libgfshare/libgfshare-1.0.5/doc/: theory.tex
src/C/libgfshare/libgfshare-1.0.5/m4/: linker.m4
src/C/libgfshare/libgfshare-1.0.5/man/: gfcombine.1.in  gfshare.7.in  gfsplit.1.in  libgfshare.5.in
src/C/libgfshare/libgfshare-1.0.5/src/: gfshare_maketable.c  libgfshare.c
src/C/libgfshare/libgfshare-1.0.5/tests/: test_gfshare_blockwise_simple.c  test_gfshare_isfield.c  test_gfsplit_gfcombine.sh
src/C/libgfshare/libgfshare-1.0.5/tools/: gfcombine.c  gfsplit.c
src/C/libressl/libressl-2.1.6/tests/: Makefile.am  Makefile.in
(+17445 files in other folders)
