name:                calf
version:             0
synopsis:            Implementation-agnostic test harness for CAVP and FIPS testing of Suite B implementations
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          dmwit@galois.com
copyright:           2014 Daniel Wagner
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     AlgorithmTypes,
                       Computation,
                       PPrint,
                       Parser,
                       Implementation.Cryptodev,
                       Implementation.Debug,
                       SuiteB,
                       Test.AES,
                       Test.TDES,
                       Test.Util,
                       Types,
                       Transducer
  other-modules:       Glue
  other-extensions:    FlexibleContexts,
                       NoMonomorphismRestriction,
                       Rank2Types,
                       LambdaCase,
                       MultiParamTypeClasses,
                       TypeOperators,
                       TypeFamilies
  build-depends:       base >=4 && <5,
                       bytestring >=0.10 && <0.11,
                       data-default >=0.5 && <0.6,
                       ioctl >=0.0 && <0.1,
                       unix >=2.6 && <2.7,
                       uu-parsinglib >=2.8 && <2.9,
                       regex-applicative >=0.3 && <0.4,
                       mtl >=2.2 && <2.3,
                       transformers >=0.4.2 && <0.5
  default-language:    Haskell2010
  hs-source-dirs:      lib

executable calf
  main-is:             Main.hs
  hs-source-dirs:      bin
  build-depends:       base >=4 && <5,
                       calf >=0 && <0.1
  default-language:    Haskell2010
